--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
+/* ------ Browser Resets ------ */
+@import url("style_with_meyer_reset.css");
+@import url("menu.css");
+
 /*
 ---------------------------
 HTML selectors
 ---------------------------
 */
-/* Resets */
-
 /* apply a natural box layout model to all elements, but allowing components to change */
 html {
     box-sizing: border-box;
@@ -14,47 +16,24 @@ html {
 *, *:before, *:after {
     box-sizing: inherit;
 }
-
-
-/*
-CSS JavaScript Open/Close Menu 1 of 3
-Be sure to see the associated .html file for more!
-
-JavaScript will provide ability for 
-user to toggle with clicking the menu button
-between these two states:
-	<nav class="show">
-		and
-	<nav>
-adding/removing the class to the nav tag
-*/
-.show { 
-	display: block;
+body {
+    margin: 0px;    
+}
+h1, h2, h3, h4, h5, h6{
+    margin: 0;
+}
+header{
+    margin: 0px;
+    padding:10px 0px;    
 }
 
-/*
-----------------------------
-HTML element selectors
-----------------------------
-*/
-/*  
-CSS JavaScript Open/Close Menu 2 of 3
-nav{ }
-remove from page flow with
-	display:none;
-this will be for the mobile viewport
-eg: dont display the entire menu when there isnt enough space
-*/
-nav { 
-	/* dont display this element as usual */
-	display:none;	
+a{
+    color: #000;
+    text-decoration: none;
 }
-
-
-
-
-
-
+ul{
+    list-style-type: none;
+}
 
 /* ------ Variables ------ */
 :root{     
@@ -64,11 +43,25 @@ nav {
 
     /* spacing/layout */
     --content-gap:10px;
-}
 
+    /* colors */
+    --color1: #cc481f;
+    --color2: #7C7A7D;
+    --color3: #7A7088;
+    --color4: #5A4B4D;
+    --color5: #050303;
+    --color6: #53322D;
+}
 img {
     max-width: 100%;
     height: auto;
+}
+
+footer h2{
+    text-align: center;
+    padding: 10px;
+    background-color: var(--color1);
+    color: white;
 }
 
 
@@ -92,24 +85,60 @@ HTML Classes
 	cursor: pointer;
 	padding-right: 12px;
 }
+
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #333;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.change .bar1 {
+  transform: translate(0, 11px) rotate(-45deg);
+}
+
+.change .bar2 {opacity: 0;}
+
+.change .bar3 {
+  transform: translate(0, -11px) rotate(45deg);
+}
+
 #nav-bar{
 	/* use flexbox to get block tags side by side  */
 	display: flex;
 	justify-content: space-between;
 }
-
 .nav-link {
 	display: block;
 	line-height: 40px;
 	text-align: center;
-	color:rgb(230, 8, 8);
-	text-decoration: none;
+	color:#000;
 	font-weight:bold;
 }
 .nav-link:hover,
 .nav-link:focus,
 .nav-link:active {
-	background-color: rgba(255, 255, 255, 0.425);
+	background-color: rgba(238, 12, 12, 0.425);
+}
+
+.name-and-title{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+.name-and-title h1{
+    margin: 0;
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+    color: var(--color1);
+}
+.name-and-title h2{
+    margin: 0;
+    font-size: 14px;
+    font-weight: 100;
+    text-align: center;
 }
 
 
@@ -118,7 +147,7 @@ HTML Classes
     height: 1000px;
     padding: 55px 15px;
 
-    background-image: url(../images/me/param-harsh3.png);
+    background-image: url(../images/me/param-harsh5.png);
     /* always fill space, never stretch or skew */
     background-size: cover;
     /* stay centered on the subject of the image   */
@@ -134,9 +163,42 @@ HTML Classes
     align-items: start;
     justify-content: flex-start;    
 }
+.intro .text-background{
+    background-color: var(--color1);
+}
+.intro .text-decoration{
+    border-bottom: 5px solid var(--color1);
+}
 
 .intro h1{
     max-width: 50%;
+    font-weight: 100;
+}
+
+.social-a{
+	/* remove underline*/
+	text-decoration: none;
+	/* an inline-block hybrid! */
+	display:inline-block;
+
+	/* dont repeat the background */
+	background-repeat: no-repeat;
+	/*  svg image should show small */
+	background-size: 20px;
+	/*  make room to show the imaeg before the a tag text */
+	padding-left:30px;
+
+	margin:5px;
+	color: var(--color1);
+}
+.email{
+	background-image: url("../images/icons/icon-email.png");	
+}
+.linkedin{
+	background-image: url("../images/icons/icon-linkedin.png");	
+}
+.github{
+	background-image: url("../images/icons/icon-github.png");	
 }
 
 /*
@@ -149,6 +211,14 @@ ID Selectors
 	margin: 0;
 	padding: 0;
 	list-style: none;	
+}
+#social-ul{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 
 
