--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,9 @@ h1, h2, h3, h4, h5, h6{
 header{
     margin: 0px;
 }
+main {
+    flex: 1;
+}
 
 a{
     color: #000;
@@ -212,7 +215,45 @@ HTML Classes
     padding: 10px 20px;
 }
 
-
+/* experience.html */
+.experience{
+    margin:5px 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.work-experience-article p{
+    margin: 2px;
+    padding: 2px;
+}
+.work-experience-article{
+    background-color: white;
+    padding: 5px 10px;
+    margin: 20px;
+    box-shadow: 0 5px 10px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    max-width: 820px;
+}
+.work-experience-header{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    border-bottom: solid;
+    border-color: var(--color2);
+}
+.work-experience-description{
+    padding: 5px 5px;
+    font-size: 0.9rem;
+}
+.work-experience-description h4{
+    color: var(--color4);
+}
+.work-experience-description li{
+    list-style-type: disc;
+}
+.company-name{
+    color: var(--color1);
+}
 
 /*
 -----------------------------------------
@@ -270,16 +311,32 @@ in wider viewports
 dont show the menu button
 when the entire menu is being shown
 */
-@media (min-width:750px){
-    html{
-        font-size: 1.5rem;
+
+@media (min-width:500px){
+    .about{
+        margin: 20px;
+        padding: 10px 30px;
     }
+    .about blockquote{
+        margin: 10px 100px;
+        line-height: 150%;
+        font-weight: 600;
+        font-size: 1.2rem;
+    }
+    .about p{
+        font-size: 1.1rem;
+        line-height: 1.8rem;
+        font-weight: 400;
+        padding: 10px 100px;
+    } 
 }
+/*
 @media (min-width:950px){
     html{
         font-size: 2.0rem;
     }
 }
+*/
 
 @media (min-width:750px){
 	/*
@@ -330,6 +387,16 @@ when the entire menu is being shown
     the special-feature class */
     .intro{
         padding: 55px 75px;
+    }
+
+    /* put work experience company name and date in flex box */
+    .work-experience-header {
+        flex-direction: row;
+        justify-content: space-between;
+        font-size: 1.2rem;
+    }
+    .work-experience-description {
+        font-size: 1.1rem;
     }
     
 }
