--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,6 @@ HTML Classes
 }
 .work-experience-article{
     background-color: white;
-    padding: 5px 10px;
     margin: 20px;
     box-shadow: 0 5px 10px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
     max-width: 820px;
@@ -238,15 +237,20 @@ HTML Classes
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    background-color: rgba(0,0,0,0.04);
     border-bottom: solid;
-    border-color: var(--color2);
+    border-width: thin;
+    border-color: lightgrey;
+    padding: 15px;
 }
 .work-experience-description{
-    padding: 5px 5px;
+    padding: 15px;
     font-size: 0.9rem;
 }
 .work-experience-description h4{
     color: var(--color4);
+    font-size: 1.3rem;
+    font-weight: 400;
 }
 .work-experience-description li{
     list-style-type: disc;
