completed grid in projects page

--- a/css/style.css
+++ b/css/style.css
@@ -261,14 +261,36 @@ HTML Classes
 
 /* projects.html */
 .projects-grid {
+    max-width: 1020px;
+    margin: 0 auto;
+    padding: 30px;
+
+    /*
+    simple grid for 
+    one column stack
+        minmax(250px, 1fr)
+    min 250px width for each article
+    otherwise articles will stretch to fill available space 1fr
+    */
     display: grid;
-    grid-template-columns: auto;
-    grid-auto-rows: auto;
-    grid-gap: 20px 40px;
-    margin: 50px;
+    grid-template-columns: minmax(250px, 1fr);
+    grid-gap: 30px;
 }
 .project-article {
     border: 1px solid rgba(0, 0, 0, 0.8);
+    position: relative;
+    background-color: white;
+}
+.project-article h3 {
+    background-color: var(--color2);
+    padding: 10px 0px;
+    text-align: center;
+}
+.project-article p {
+    padding: 0px 10px;
+}
+.project-article ul {
+    list-style-type: disc;
 }
 
 /*
@@ -327,6 +349,17 @@ in wider viewports
 dont show the menu button
 when the entire menu is being shown
 */
+
+@media (min-width: 650px){
+    /*
+    convert grid to 2 columns 
+    */
+    .projects-grid{
+        grid-template-columns: repeat(2, minmax(250px, 1fr));
+        padding: 30px;
+        grid-gap: 50px;
+    }
+}
 
 @media (min-width:500px){
     .about{
