added home button

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ ul{
     --content-gap:10px;
 
     /* colors */
-    --color1: chocolate;
+    --color1: #E39318;
     --color2: #7C7A7D;
     --color3: #7A7088;
     --color4: #5A4B4D;
